# zkpchat

./: README.md
zkpchat_phase1/: Cargo.toml
zkpchat_phase1/client/src/: main.rs
zkpchat_phase1/relay/: Cargo.toml
zkpchat_phase1/storage/examples/: storage_node.rs
zkpmail_phase1/client/: Cargo.toml  key.txt
zkpmail_phase1/relay/examples/: relay_node.rs
zkpmail_phase1/storage/: Cargo.toml
