[[bin]]
name = "relay_node"
path = "examples/relay_node.rs"

[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
aes-gcm = "0.11.0-pre.2"
aes = "0.9.0-pre.2"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json"] }