[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
reqwest = { version = "0.11", features = ["json"] }
structopt = "0.3"
hex = "0.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
aes-gcm = "0.10"
aes = "0.8"
rand = "0.8.5"
